Closed Bug 1805901 Opened 3 years ago Closed 3 years ago

Perma TEST-UNEXPECTED-FAIL | dom/media/webrtc/tests/mochitests/test_peerConnection_encodingsNegotiation.html | Error executing test: OperationError: SIPCC Failed to parse SDP when Gecko 110 merges to Beta on 2023-01-16

Categories

(Core :: WebRTC: Audio/Video, defect)

defect

Tracking

()

VERIFIED FIXED
110 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox108 --- unaffected
firefox109 --- unaffected
firefox110 + verified

People

(Reporter: SerbanS, Assigned: bwc)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Central-as-beta-simulation

How to run these simulations

Failure log

[task 2022-12-15T11:57:49.436Z] 11:57:49     INFO - TEST-OK | dom/media/webrtc/tests/mochitests/test_peerConnection_disabledVideoPreNegotiation.html | took 8083ms
[task 2022-12-15T11:57:49.582Z] 11:57:49     INFO - GECKO(8060) | [Parent 8060, Compositor] WARNING: Possibly dropping task posted to updater thread: file /builds/worker/checkouts/gecko/gfx/layers/apz/src/APZUpdater.cpp:371
[task 2022-12-15T11:57:49.594Z] 11:57:49     INFO - TEST-START | dom/media/webrtc/tests/mochitests/test_peerConnection_encodingsNegotiation.html
[task 2022-12-15T11:57:49.968Z] 11:57:49     INFO - GECKO(8060) | TEST DEVICES: Got loopback audio: Monitor of Null Output
[task 2022-12-15T11:57:49.969Z] 11:57:49     INFO - GECKO(8060) | TEST DEVICES: Got loopback video: Dummy video device (0x0000)
[task 2022-12-15T11:57:50.238Z] 11:57:50     INFO - GECKO(8060) | Timecard created 1671105462.237509
[task 2022-12-15T11:57:50.239Z] 11:57:50     INFO - GECKO(8060) |  Timestamp   | Delta       | Event                                  | File                         | Function
[task 2022-12-15T11:57:50.239Z] 11:57:50     INFO - GECKO(8060) | ====================================================================================================================================
[task 2022-12-15T11:57:50.240Z] 11:57:50     INFO - GECKO(8060) |     0.001049 |    0.001049 | Constructor Completed                  | PeerConnectionImpl.cpp:366   | PeerConnectionImpl
[task 2022-12-15T11:57:50.240Z] 11:57:50     INFO - GECKO(8060) |     0.003029 |    0.001980 | Initializing PC Ctx                    | PeerConnectionImpl.cpp:455   | Initialize
[task 2022-12-15T11:57:50.240Z] 11:57:50     INFO - GECKO(8060) |     0.538429 |    0.535400 | Set Remote Description                 | PeerConnectionImpl.cpp:1750  | SetRemoteDescription
[task 2022-12-15T11:57:50.241Z] 11:57:50     INFO - GECKO(8060) |     0.752231 |    0.213802 | Add Ice Candidate                      | PeerConnectionImpl.cpp:1866  | AddIceCandidate
[task 2022-12-15T11:57:50.241Z] 11:57:50     INFO - GECKO(8060) |     0.801565 |    0.049334 | Add Ice Candidate                      | PeerConnectionImpl.cpp:1866  | AddIceCandidate
[task 2022-12-15T11:57:50.242Z] 11:57:50     INFO - GECKO(8060) |     0.805516 |    0.003951 | Add Ice Candidate                      | PeerConnectionImpl.cpp:1866  | AddIceCandidate
[task 2022-12-15T11:57:50.243Z] 11:57:50     INFO - GECKO(8060) |     0.807444 |    0.001928 | Add Ice Candidate                      | PeerConnectionImpl.cpp:1866  | AddIceCandidate
[task 2022-12-15T11:57:50.244Z] 11:57:50     INFO - GECKO(8060) |     0.808527 |    0.001083 | Add Ice Candidate                      | PeerConnectionImpl.cpp:1866  | AddIceCandidate
[task 2022-12-15T11:57:50.248Z] 11:57:50     INFO - GECKO(8060) |     0.809523 |    0.000996 | Add Ice Candidate                      | PeerConnectionImpl.cpp:1866  | AddIceCandidate
[task 2022-12-15T11:57:50.249Z] 11:57:50     INFO - GECKO(8060) |     0.810473 |    0.000950 | Add Ice Candidate                      | PeerConnectionImpl.cpp:1866  | AddIceCandidate
[task 2022-12-15T11:57:50.249Z] 11:57:50     INFO - GECKO(8060) |     0.811924 |    0.001451 | Add Ice Candidate                      | PeerConnectionImpl.cpp:1866  | AddIceCandidate
[task 2022-12-15T11:57:50.249Z] 11:57:50     INFO - GECKO(8060) |     0.812926 |    0.001002 | Add Ice Candidate                      | PeerConnectionImpl.cpp:1866  | AddIceCandidate
[task 2022-12-15T11:57:50.254Z] 11:57:50     INFO - GECKO(8060) |     0.814296 |    0.001370 | Create Answer                          | PeerConnectionImpl.cpp:1567  | CreateAnswer
[task 2022-12-15T11:57:50.254Z] 11:57:50     INFO - GECKO(8060) |     0.819739 |    0.005443 | Set Local Description                  | PeerConnectionImpl.cpp:1640  | SetLocalDescription
[task 2022-12-15T11:57:50.260Z] 11:57:50     INFO - GECKO(8060) |     0.834891 |    0.015152 | Ice gathering state: gathering         | PeerConnectionImpl.cpp:3012  | IceGatheringStateChange
[task 2022-12-15T11:57:50.260Z] 11:57:50     INFO - GECKO(8060) |     0.836233 |    0.001342 | Ice Candidate gathered                 | PeerConnectionImpl.cpp:2842  | CandidateReady
[task 2022-12-15T11:57:50.260Z] 11:57:50     INFO - GECKO(8060) |     0.836327 |    0.000094 | Send Ice Candidate to content          | PeerConnectionImpl.cpp:2906  | SendLocalIceCandidateToContent
[task 2022-12-15T11:57:50.260Z] 11:57:50     INFO - GECKO(8060) |     0.840410 |    0.004083 | Ice Candidate gathered                 | PeerConnectionImpl.cpp:2842  | CandidateReady
[task 2022-12-15T11:57:50.260Z] 11:57:50     INFO - GECKO(8060) |     0.840506 |    0.000096 | Send Ice Candidate to content          | PeerConnectionImpl.cpp:2906  | SendLocalIceCandidateToContent
[task 2022-12-15T11:57:50.260Z] 11:57:50     INFO - GECKO(8060) |     0.844570 |    0.004064 | Ice Candidate gathered                 | PeerConnectionImpl.cpp:2842  | CandidateReady
[task 2022-12-15T11:57:50.263Z] 11:57:50     INFO - GECKO(8060) |     0.844663 |    0.000093 | Send Ice Candidate to content          | PeerConnectionImpl.cpp:2906  | SendLocalIceCandidateToContent
[task 2022-12-15T11:57:50.264Z] 11:57:50     INFO - GECKO(8060) |     0.848889 |    0.004226 | Ice Candidate gathered                 | PeerConnectionImpl.cpp:2842  | CandidateReady
[task 2022-12-15T11:57:50.265Z] 11:57:50     INFO - GECKO(8060) |     0.848973 |    0.000084 | Send Ice Candidate to content          | PeerConnectionImpl.cpp:2906  | SendLocalIceCandidateToContent
[task 2022-12-15T11:57:50.270Z] 11:57:50     INFO - GECKO(8060) |     0.851802 |    0.002829 | Ice Candidate gathered                 | PeerConnectionImpl.cpp:2842  | CandidateReady
[task 2022-12-15T11:57:50.270Z] 11:57:50     INFO - GECKO(8060) |     0.851897 |    0.000095 | Send Ice Candidate to content          | PeerConnectionImpl.cpp:2906  | SendLocalIceCandidateToContent
[task 2022-12-15T11:57:50.271Z] 11:57:50     INFO - GECKO(8060) |     0.854869 |    0.002972 | Ice gathering state: complete          | PeerConnectionImpl.cpp:3015  | IceGatheringStateChange
[task 2022-12-15T11:57:50.274Z] 11:57:50     INFO - GECKO(8060) |     0.862916 |    0.008047 | Ice state: checking                    | PeerConnectionImpl.cpp:2936  | IceConnectionStateChange
[task 2022-12-15T11:57:50.275Z] 11:57:50     INFO - GECKO(8060) |     0.951797 |    0.088881 | Ice state: connected                   | PeerConnectionImpl.cpp:2939  | IceConnectionStateChange
[task 2022-12-15T11:57:50.275Z] 11:57:50     INFO - GECKO(8060) |     7.102903 |    6.151106 | Close                                  | PeerConnectionImpl.cpp:2209  | Close
[task 2022-12-15T11:57:50.275Z] 11:57:50     INFO - GECKO(8060) |     7.993937 |    0.891034 | Destructor Invoked                     | PeerConnectionImpl.cpp:383   | ~PeerConnectionImpl
[task 2022-12-15T11:57:50.276Z] 11:57:50     INFO - GECKO(8060) |     7.993937 |    0.000000 | {77b8d0eb-c140-4571-90c5-9419019f01dd} | PeerConnectionImpl.cpp:384   | ~PeerConnectionImpl
[task 2022-12-15T11:57:50.276Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:391: ~PeerConnectionImpl: PeerConnectionImpl destructor invoked for {77b8d0eb-c140-4571-90c5-9419019f01dd}
[task 2022-12-15T11:57:50.277Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Socket Thread]: I/mtransport NrIceCtx(PC:{77b8d0eb-c140-4571-90c5-9419019f01dd} 1671105462240504 (id=6442451045 url=https://example.com/tests/dom/media/webrtc/tests/moc): Destroy
<...>
task 2022-12-15T11:57:50.746Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Main Thread]: I/signaling [main|sdp_config] sdp_config.c:86: SDP: Initialized config pointer: 7f9982f71f90
[task 2022-12-15T11:57:50.750Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Main Thread]: E/jsep [{dd507b46-a81a-42ae-b105-bc622a2b34c0} 1671105470592405 (id=6442451047 url=https://example.com/tests/dom/media/webrtc/tests/moc]: SIPCC Failed to parse SDP: SDP Parse Error on line 59: Rid can be at most 16 characters long (due to internal limitations) at column -1
[task 2022-12-15T11:57:50.751Z] 11:57:50     INFO - GECKO(8060) | [Child 8159, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, dom::PCError::OperationError) failed with result 0x80070057 (NS_ERROR_ILLEGAL_VALUE): file /builds/worker/checkouts/gecko/dom/media/webrtc/jsep/JsepSessionImpl.cpp:1004
[task 2022-12-15T11:57:50.756Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Main Thread]: E/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:1795: SetRemoteDescription: pc = {dd507b46-a81a-42ae-b105-bc622a2b34c0}, error = SIPCC Failed to parse SDP: SDP Parse Error on line 59: Rid can be at most 16 characters long (due to internal limitations) at column -1
[task 2022-12-15T11:57:50.756Z] 11:57:50     INFO - TEST-INFO | started process screentopng
[task 2022-12-15T11:57:50.970Z] 11:57:50     INFO - TEST-INFO | screentopng: exit 0
[task 2022-12-15T11:57:50.971Z] 11:57:50     INFO - Buffered messages logged at 11:57:50
[task 2022-12-15T11:57:50.971Z] 11:57:50     INFO - TEST-PASS | dom/media/webrtc/tests/mochitests/test_peerConnection_encodingsNegotiation.html | A valid string reason is expected 
[task 2022-12-15T11:57:50.972Z] 11:57:50     INFO - TEST-PASS | dom/media/webrtc/tests/mochitests/test_peerConnection_encodingsNegotiation.html | Reason cannot be empty 
[task 2022-12-15T11:57:50.973Z] 11:57:50     INFO - Skipping ICE Server for this test
[task 2022-12-15T11:57:50.975Z] 11:57:50     INFO - Running test: checkVideoEncodingLimit
[task 2022-12-15T11:57:50.977Z] 11:57:50     INFO - TEST-PASS | dom/media/webrtc/tests/mochitests/test_peerConnection_encodingsNegotiation.html | undefined assertion name 
[task 2022-12-15T11:57:50.983Z] 11:57:50     INFO - Done running test: checkVideoEncodingLimit
[task 2022-12-15T11:57:50.987Z] 11:57:50     INFO - Running test: checkScaleResolutionDownByAutoFillPowersOf2
[task 2022-12-15T11:57:50.988Z] 11:57:50     INFO - TEST-PASS | dom/media/webrtc/tests/mochitests/test_peerConnection_encodingsNegotiation.html | undefined assertion name 
[task 2022-12-15T11:57:50.988Z] 11:57:50     INFO - Done running test: checkScaleResolutionDownByAutoFillPowersOf2
[task 2022-12-15T11:57:50.988Z] 11:57:50     INFO - Running test: checkLibwebrtcRidLengthLimit
[task 2022-12-15T11:57:50.989Z] 11:57:50     INFO - Buffered messages finished
[task 2022-12-15T11:57:50.992Z] 11:57:50     INFO - TEST-UNEXPECTED-FAIL | dom/media/webrtc/tests/mochitests/test_peerConnection_encodingsNegotiation.html | Error executing test: OperationError: SIPCC Failed to parse SDP: SDP Parse Error on line 59: Rid can be at most 16 characters long (due to internal limitations) at column -1
[task 2022-12-15T11:57:50.992Z] 11:57:50     INFO - 
[task 2022-12-15T11:57:50.992Z] 11:57:50     INFO - doOfferToRecvSimulcast@https://example.com/tests/dom/media/webrtc/tests/mochitests/simulcast.js:186:18
[task 2022-12-15T11:57:50.993Z] 11:57:50     INFO -  
[task 2022-12-15T11:57:50.993Z] 11:57:50     INFO - SimpleTest.ok@https://example.com/tests/SimpleTest/SimpleTest.js:404:16
[task 2022-12-15T11:57:50.993Z] 11:57:50     INFO - runTestWhenReady@https://example.com/tests/dom/media/webrtc/tests/mochitests/head.js:504:7
[task 2022-12-15T11:57:50.993Z] 11:57:50     INFO - GECKO(8060) | MEMORY STAT | vsize 11086MB | residentFast 219MB | heapAllocated 21MB
[task 2022-12-15T11:57:50.993Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:2899: Passing local candidate to content: candidate:0 1 UDP 2122187007 172.17.0.4 47562 typ host
[task 2022-12-15T11:57:50.994Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:2899: Passing local candidate to content: candidate:1 1 UDP 2122252543 fd15:4ba5:5a2b:100a:0:242:ac11:4 45416 typ host
[task 2022-12-15T11:57:50.994Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:2899: Passing local candidate to content: candidate:2 1 TCP 2105458943 172.17.0.4 9 typ host tcptype active
[task 2022-12-15T11:57:50.995Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:2899: Passing local candidate to content: candidate:3 1 TCP 2105524479 fd15:4ba5:5a2b:100a:0:242:ac11:4 9 typ host tcptype active
[task 2022-12-15T11:57:50.996Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:2899: Passing local candidate to content: candidate:0 2 UDP 2122187006 172.17.0.4 45601 typ host
[task 2022-12-15T11:57:50.997Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:2899: Passing local candidate to content: candidate:1 2 UDP 2122252542 fd15:4ba5:5a2b:100a:0:242:ac11:4 42479 typ host
[task 2022-12-15T11:57:50.998Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:2899: Passing local candidate to content: candidate:2 2 TCP 2105458942 172.17.0.4 9 typ host tcptype active
[task 2022-12-15T11:57:50.999Z] 11:57:50     INFO - GECKO(8060) | [Child 8159: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:2899: Passing local candidate to content: candidate:3 2 TCP 2105524478 fd15:4ba5:5a2b:100a:0:242:ac11:4 9 typ host tcptype active
[task 2022-12-15T11:57:51.001Z] 11:57:51     INFO - GECKO(8060) | [Child 8159: Main Thread]: I/signaling [main|PeerConnectionImpl] PeerConnectionImpl.cpp:2899: Passing local candidate to content:
[task 2022-12-15T11:57:51.002Z] 11:57:51     INFO - GECKO(8060) | [Parent 8060, Main Thread] WARNING: NS_ENSURE_TRUE(root) failed: file /builds/worker/checkouts/gecko/layout/base/nsDocumentViewer.cpp:2635
[task 2022-12-15T11:57:51.005Z] 11:57:51     INFO - GECKO(8060) | [GLX] window 2200398 has VisualID 0x41
[task 2022-12-15T11:57:51.005Z] 11:57:51     INFO - GECKO(8060) | [Parent 8060, Renderer] WARNING: robust_buffer_access_behavior marked as unsupported: file /builds/worker/checkouts/gecko/gfx/gl/GLContextFeatures.cpp:632
[task 2022-12-15T11:57:51.005Z] 11:57:51     INFO - GECKO(8060) | [Parent 8060, Renderer] WARNING: Robustness supported, strategy is not LOSE_CONTEXT_ON_RESET!: file /builds/worker/checkouts/gecko/gfx/gl/GLContext.cpp:995
[task 2022-12-15T11:57:51.006Z] 11:57:51     INFO - GECKO(8060) | [Parent 8060, Renderer] WARNING: robustness marked as unsupported: file /builds/worker/checkouts/gecko/gfx/gl/GLContextFeatures.cpp:632
[task 2022-12-15T11:57:51.006Z] 11:57:51     INFO - GECKO(8060) | [2022-12-15T11:57:50Z WARN  webrender::device::gl] Missing optimized shader source for gpu_cache_update
[task 2022-12-15T11:57:51.007Z] 11:57:51     INFO - GECKO(8060) | [2022-12-15T11:57:50Z WARN  webrender::renderer::init] asking to enable_gpu_markers but no supporting extension was found
[task 2022-12-15T11:57:51.007Z] 11:57:51     INFO - TEST-OK | dom/media/webrtc/tests/mochitests/test_peerConnection_encodingsNegotiation.html | took 1393ms
Flags: needinfo?(docfaraday)
Assignee: nobody → docfaraday
Flags: needinfo?(docfaraday)

Patch is working in today's central as beta simulation.

Hi Byron, can we go ahead and land this since it's r+ and working on beta-sims?

Flags: needinfo?(docfaraday)

Sure.

Flags: needinfo?(docfaraday)
Pushed by bcampen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/74faf9f58e77 Let rids of length > 16 slide in SDP parse code, and handle them in jsep. r=mjf
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 110 Branch
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: