Bug 1805901: Let rids of length > 16 slide in SDP parse code, and handle them in jsep. r=mjf

Differential Revision: https://phabricator.services.mozilla.com/D164848